@@ -18,7 +18,6 @@ package org.springframework.ai.openai.chat.proxy;
 
 import java.io.IOException;
 import java.net.URI;
-import java.net.URL;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
@@ -385,7 +384,7 @@ class OllamaWithOpenAiChatModelIT {
 			.text("Explain what do you see on this picture?")
 			.media(List.of(Media.builder()
 				.mimeType(MimeTypeUtils.IMAGE_PNG)
-				.data(new URL("https://docs.spring.io/spring-ai/reference/_images/multimodal.test.png"))
+				.data(URI.create("https://docs.spring.io/spring-ai/reference/_images/multimodal.test.png"))
 				.build()))
 			.build();
 
